# Skytickets

./: Skyblock Services.db  external_calculators.py  hypixel_api.py  main.py  pyproject.toml  readme.md  requirements.txt  tickets_variables.py  web.py
chat_exporter/: __init__.py  chat_exporter.py  emoji_convert.py  markdown_convert.py  mention_convert.py  misc_tools.py
chat_exporter/chat_exporter_html/: base.html  continue_message.html  message-embed-field-inline.html  message-embed-field.html  message-embed.html  message.html  message_attachment.html
templates/: home.html  not_found.html  transcript-test-021.html
